# basketballintelligence

./: .env.example  .gitattributes  .gitignore  BUILD_STATUS.md  DATA_MANIFEST.md  DECISIONS.md  Dockerfile  PRODUCTION_PLAN.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
data/: basketball.db  film.db  regression-snapshot.json
plans/: INSTANCE_0_ORCHESTRATOR.md  INSTANCE_1_DATA_ENGINEERING.md  INSTANCE_1_PHASE2.md  INSTANCE_1_PLAYOFF_FRAMEWORK.md  INSTANCE_2_FEATURES_FRONTEND.md  INSTANCE_2_HOT_ZONES_V2.md  INSTANCE_3_HEAD_TO_HEAD.md  INSTANCE_3_VIDEO_ML_TESTING.md  INSTANCE_4_VIDEO_ML.md  INSTANCE_A_UI_OVERHAUL.md  INSTANCE_B_UI_OVERHAUL.md  ORCHESTRATOR_UI_OVERHAUL.md  OVERNIGHT_COORDINATOR.md  PARALLEL_FIX_PLAN.md  PASTE_INTO_INSTANCE_1.md  PASTE_INTO_INSTANCE_2.md  PASTE_INTO_INSTANCE_3.md  PASTE_INTO_INSTANCE_4.md  PROMPT_INSTANCE_1_DATA_ENGINEERING.md  PROMPT_INSTANCE_1_SHOT_COORDS.md  PROMPT_INSTANCE_2_FEATURES.md  PROMPT_INSTANCE_2_HEADSHOTS.md  (+2 more)
video-ml/: README.md  __init__.py  config.py  pyproject.toml  requirements.txt
video-ml/models/: schemas.py
video-ml/pipeline/: align.py  classify.py  detect.py  embed.py  export.py  ingest.py  link.py  segment.py  tag.py
video-ml/scripts/: demo.py  process_clip.py  process_game.py
video-ml/tests/: conftest.py  test_align.py  test_classify.py  test_detect.py  test_embed.py  test_export.py  test_ingest.py  test_link.py  test_scoreboard_ocr.py  test_segment.py  test_tag.py
video-ml/utils/: court_detect.py  ffmpeg.py  frame_extract.py  scoreboard_ocr.py
(+172 files in other folders)
